<resources>
    <string name="app_name" translatable="false">SistemasMécanicosJH</string>
    <string name="Correo">Correo</string>
    <string name="Contrasenia">Contraseña</string>
    <string name="SistemasMecanicos">Sistemas Mecánicos JH</string>
    <string name="Registrarse">Registrar</string>
    <string name="IniciarSesion">Iniciar Sesión</string>
    <string name="msg_fallo_login">Error, al iniciar Sesión!</string>
    <string name="msg_fallo_registro">Error, al Registrarse!</string>
    <string name="title_activity_inventario">Inventario</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inventario">Inventario</string>
    <string name="menu_contacto">Contactos</string>
    <string name="menu_cliente">Clientes</string>
    <string name="logoff">Cerrar Sesión</string>
    <string name="Inventario">SMJH - Inventario</string>
    <string name="Inventario2">Inventario</string>

    <string name="msg_nombre">Nombre del objeto</string>
    <string name="msg_marca">Marca</string>
    <string name="msg_cantidad">Cantitdad de objetos</string>
    <string name="msg_estado">Estado</string>
    <string name="msg_nombreCompleto">Nombre Completo</string>
    <string name="msg_correo">Correo</string>
    <string name="msg_longitud">Longitud</string>
    <string name="msg_latitud">Latitud</string>
    <string name="msg_telefono">Telefono</string>
    <string name="msg_altura">Altura</string>
    <string name="msg_rutaImagen">Ruta Imagen</string>
    <string name="bt_agregar">Agregar</string>
    <string name="bt_acciones">Acciones</string>
    <string name="bt_actualizar">Actualizar</string>
    <string name="bt_eliminar">Eliminar</string>
    <string name="msgObjAgregado">Objeto añadido Satisfactoriamente!</string>
    <string name="msgObjError">Error, faltan Datos</string>
    <string name="tv_nombreObjeto">TextView</string>
    <string name="tv_marca">TextView</string>
    <string name="tv_cantidadObjetos">TextView</string>
    <string name="tv_estado">TextView</string>
    <string name="tv_herramienta">Por definir</string>
    <string name="msgInventarioActualizado" >Inventario Actualizado</string>
    <string name="msgFaltanDatos" >Error, Faltan  Datos</string>
    <string name="msgClientesActualizado" >Cliente Actualizado</string>
    <string name="deleted">Eliminar Clientes</string>
    <string name="seguroBorrar">Estas seguro de eliminar</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="todo">To do</string>
    <string name="msg_subiendo_imagen">Subiendo Imagen</string>
    <string name="msg_imagen">Imagen Subida</string>
    <string name="Clientes">SMJH - Clientes</string>
    <string name="AddInventario">Añadir al Inventario</string>
    <string name="UpdateInventario">Acciones Objeto</string>
    <string name="AddCliente">Añadir Cliente</string>
    <string name="UpdateCliente">Acciones Cliente</string>
    <string name="msg_enviar_correo">Enviar Email</string>
    <string name="msg_whatsapp_send">Enviar WhatsApp</string>
    <string name="msg_ver_mapa">Ver Ubicación</string>
    <string name="msg_phone_call">Realizar Llamada</string>
    <string name="msg_datos">Error, faltan datos</string>
    <string name="msg_saludos">"Querido: "</string>
    <string name="msg_mensaje_correo">"Le escribo este correo para  "</string>


</resources>