<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.clientes.UpdateClientesFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/GrisClaro"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/etNombreCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/msg_nombreCompleto"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#37474F" />

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/msg_correo"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="#424242" />


            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/msg_telefono"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:textColorHint="#37474F" />

            <EditText
                android:id="@+id/etLatitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/msg_latitud"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#424242" />

            <EditText
                android:id="@+id/etLongitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/msg_longitud"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#424242" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_Delete"
                    android:layout_width="163dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="15dp"
                    android:backgroundTint="#F9CD16"
                    android:text="@string/bt_eliminar"
                    android:textColor="#455A64" />

                <Button
                    android:id="@+id/bt_Update"
                    android:layout_width="163dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="15dp"
                    android:backgroundTint="#F9CD16"
                    android:text="@string/bt_actualizar"
                    android:textColor="#455A64"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



                <ImageButton
                    android:id="@+id/bt_email"
                    android:layout_width="0dp"
                    android:layout_height="92dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/msg_enviar_correo"
                    android:src="@drawable/ic_email" />

                <ImageButton
                    android:id="@+id/bt_phone"
                    android:layout_width="2dp"
                    android:layout_height="92dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/msg_phone_call"
                    android:src="@drawable/ic_phone" />

                <ImageButton
                    android:id="@+id/bt_whatsapp"
                    android:layout_width="0dp"
                    android:layout_height="92dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/msg_whatsapp_send"
                    android:scaleType="fitCenter"
                    android:src="@drawable/whatsapp_logo"
                    tools:ignore="ImageContrastCheck" />

                <ImageButton
                    android:id="@+id/bt_location"
                    android:layout_width="0dp"
                    android:layout_height="92dp"
                    android:layout_weight="1"
                    android:contentDescription="  @string/msg_ver_mapa"
                    android:src="@drawable/ic_location" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="match_parent"
                android:layout_height="319dp"
                android:contentDescription="@string/msg_imagen"
                android:scaleType="centerInside"
                tools:ignore="ImageContrastCheck"
                tools:src="@tools:sample/backgrounds/scenic" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>