<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_Correo"
        android:layout_width="387dp"
        android:layout_height="90dp"
        android:layout_marginTop="225dp"
        android:backgroundTint="#021730"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/Correo"
        android:inputType="textEmailAddress"
        android:textColorHint="#58606D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_clave"
        android:layout_width="386dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#021730"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/Contrasenia"
        android:inputType="textPassword"
        android:textColorHint="#58606D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Correo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/SistemasMecanicos"
        android:textAlignment="center"
        android:textColor="#F9CD16"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_registro"
        android:layout_width="163dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#F9CD16"
        android:text="@string/Registrarse"
        android:textColor="#58606D"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_clave" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="163dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#F9CD16"
        android:text="@string/IniciarSesion"
        android:textColor="#58606D"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_registro"
        app:layout_constraintTop_toBottomOf="@+id/et_clave" />

</androidx.constraintlayout.widget.ConstraintLayout>