<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inventario.AddInventarioFragment">
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/GrisClaro"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_nombre"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_marca"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etCantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_cantidad"
                android:inputType="phone" />

            <EditText
                android:id="@+id/etEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_estado"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/bt_Updated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#58606D"
                android:backgroundTint="#F9CD16"
                android:text="@string/bt_agregar" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/msgMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/bt_photo_inventario"
                    android:backgroundTint="#021730"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_photo" />

                <ImageButton
                    android:id="@+id/bt_rota_l_inventario"
                    android:backgroundTint="#021730"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_rotate_l" />

                <ImageButton
                    android:id="@+id/bt_rota_r_inventario"
                    android:backgroundTint="#021730"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_rotate_r" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/todo"
                android:scaleType="centerInside"
                tools:ignore="ImageContrastCheck"
                tools:src="@tools:sample/backgrounds/scenic" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>