<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inventario">

    <fragment
        android:id="@+id/nav_inventario"
        android:name="com.sistemasmcanicosjh.ui.inventario.InventarioFragment"
        android:label="@string/Inventario"
        tools:layout="@layout/fragment_inventario" >
        <action
            android:id="@+id/action_nav_inventario_to_addInventarioFragment"
            app:destination="@id/addInventarioFragment" />
        <action
            android:id="@+id/action_nav_inventario_to_updateInventarioFragment2"
            app:destination="@id/updateInventarioFragment2" />
    </fragment>

    <fragment
        android:id="@+id/nav_contacto"
        android:name="com.sistemasmcanicosjh.ui.gallery.GalleryFragment"
        android:label="@string/menu_contacto"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_clientes"
        android:name="com.sistemasmcanicosjh.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_cliente"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addInventarioFragment"
        android:name="com.sistemasmcanicosjh.ui.inventario.AddInventarioFragment"
        android:label="fragment_add_inventario"
        tools:layout="@layout/fragment_add_inventario" >
        <action
            android:id="@+id/action_addInventarioFragment_to_nav_inventario"
            app:destination="@id/nav_inventario" />
    </fragment>
    <fragment
        android:id="@+id/updateInventarioFragment2"
        android:name="com.sistemasmcanicosjh.ui.inventario.UpdateInventarioFragment"
        android:label="fragment_update_inventario"
        tools:layout="@layout/fragment_update_inventario" >
        <action
            android:id="@+id/action_updateInventarioFragment2_to_nav_inventario"
            app:destination="@id/nav_inventario" />
        <argument
            android:name="inventario"
            app:argType="com.sistemasmcanicosjh.model.Inventario" />
    </fragment>
</navigation>